+ : new feature
- : deprecated feature
* : bugfix or changed code

Changes in Achievo 0.7.2
------------------------
+ Added support voor Oracle 8i databases.
+ Added context sensitive help feature.
* Updated Italian language files.
* Fixed some Internet Explorer 4 incompatibilities.

Changes in Achievo 0.7.1
------------------------
* Fixed a bug in postgresql support (outer joins).
* Fixed a few bugs in the database install and demo files.
* Fixed a bug in the frameset that confused Achievo's session manager.
+ New feature for themes: alternating row backgroundcolors.

Changes in Achievo 0.7
----------------------
+ Added support for the PostgreSQL database server.
* Improvements to the atk backend: major performance improvements, 
  a new module system and session support.
+ Support for submenu's. 
- Achievo is now PHP4 based. PHP3 is no longer supported.

Changes in Achievo 0.6.5
------------------------
+ Added a user manual (first draft).
* Removed a whitespace from the configfile that caused errors on some
  systems.
* Updated french language file.

Changes in Achievo 0.6.4
------------------------
* Fixed a bug with phase templates that contained quotes.
* Replaced all '<?' tags with '<?php' for setups that don't support '<?'.
+ Added Czech language file.
* Updated French language file
+ Added support for other than western-european character sets.

Changes in Achievo 0.6.3
------------------------
* Updated Finnish language file
* Small fix to prevent a warning with some php versions
* Fixed bug in .sql files: employee table lacked a primary key
* Fixed bug in hoursurvey that caused an empty list when sorting after a
  refresh
+ Added an 'order by' option for printer friendly hoursurvey
* Changed the order of Edit/Delete links on pages

Changes in Achievo 0.6.2
------------------------
* Improved documentation (fixed bugs in INSTALL file)
+ Added FAQ document
* Improved Italian language file